<resources>
    <string name="app_name">Remind Me</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="months">Month</string>
    <string name="day1">Today, 6 January 1970</string>
    <string name="event">  Event Name</string>
    <string name="club_name">  Club Name</string>
    <string name="date1">6/01/1970</string>
    <string name="date2">7/01/1970</string>
    <string name="date3">8/01/1970</string>
    <string name="day2">7 January 1970</string>
    <string name="place">Place</string>
    <string name="day3">8 January 1970</string>
    <string name="add">Add To Calendar</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="ge250">GE250/51</string>
</resources>
