<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView14"
        android:layout_width="360dp"
        android:layout_height="603dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_bg"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="224dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/event"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/textView25"
        app:layout_constraintTop_toTopOf="@+id/textView14"
        tools:layout_editor_absoluteX="48dp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="314dp"
        android:layout_height="321dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/location"
        android:textColor="#002F4C"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView27"
        app:layout_constraintTop_toBottomOf="@+id/textView24"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="69dp" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginBottom="48dp"
        android:text="TextView"
        android:textColor="#002F4C"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView29"
        tools:layout_editor_absoluteX="69dp" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/time"
        android:textColor="#002F4C"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/textView27"
        tools:layout_editor_absoluteX="69dp" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="67dp"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="#002F4C"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView25"
        app:layout_constraintVertical_bias="0.828"
        tools:layout_editor_absoluteX="69dp" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="54dp"
        android:layout_height="17dp"
        android:text="@string/date"
        android:textColor="#002F4C"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="272dp"
        tools:layout_editor_absoluteY="526dp" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="15dp"
        android:textColor="#002F4C"
        tools:layout_editor_absoluteX="272dp"
        tools:layout_editor_absoluteY="549dp" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ge250"
        android:textColor="#002F4C"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="272dp"
        tools:layout_editor_absoluteY="592dp" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="15dp"
        android:textColor="#002F4C"
        tools:layout_editor_absoluteX="272dp"
        tools:layout_editor_absoluteY="616dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="189dp"
        android:layout_height="34dp"
        android:layout_marginBottom="44dp"
        android:background="#002F4C"
        android:text="@string/add"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>