<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="400dp"
        android:layout_height="31dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="112dp"
        android:background="#002F4C"
        android:gravity="center"
        android:text="@string/day2"
        android:textColor="#FFFF"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginBottom="186dp"
        android:text="@string/event"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="326dp"
        android:layout_height="54dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginBottom="163dp"
        android:background="@drawable/rounded_bg"
        android:gravity="left"
        android:text=""
        android:textSize="20dp" />

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
        />

    </android.support.design.widget.AppBarLayout>

    <include
        android:id="@+id/include"
        layout="@layout/content_main" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="#002F4C"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#FFF"
            android:textSize="35dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="400dp"
            android:layout_height="31dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginBottom="348dp"
            android:background="#002F4C"
            android:gravity="center"
            android:text="@string/day1"
            android:textColor="#FFF"
            android:textSize="20dp"

            />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="292dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="58dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="326dp"
            android:layout_height="54dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginBottom="279dp"
            android:background="@drawable/rounded_bg"
            android:gravity="left"
            android:text=""
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="326dp"
            android:layout_height="54dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="41dp"
            android:layout_marginRight="41dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/rounded_bg"
            android:gravity="left"
            android:text=""
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="326dp"
            android:layout_height="54dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginBottom="159dp"
            android:background="@drawable/rounded_bg"
            android:gravity="left"
            android:text=""
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="68dp"
            android:layout_marginRight="68dp"
            android:layout_marginBottom="306dp"
            android:text="@string/date1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="137dp"
            android:layout_height="39dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="59dp"
            android:layout_marginLeft="59dp"
            android:layout_marginBottom="289dp"
            android:text="@string/event"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="58dp"
            android:layout_marginLeft="58dp"
            android:layout_marginBottom="183dp"
            android:text="@string/event"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="57dp"
            android:layout_marginLeft="57dp"
            android:layout_marginBottom="57dp"
            android:text="@string/event"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="69dp"
            android:layout_marginRight="69dp"
            android:layout_marginBottom="65dp"
            android:text="@string/date3" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="68dp"
            android:layout_marginRight="68dp"
            android:layout_marginBottom="186dp"
            android:text="@string/date2" />

        TextView
        android:id="@+id/textView6"
        android:layout_width="400dp"
        android:layout_height="31dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="-9dp"
        android:background="#002F4C"
        android:gravity="center"
        android:text="@string/day2"
        android:textColor="#FFFF"
        android:textSize="20dp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="400dp"
            android:layout_height="31dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="112dp"
            android:background="#002F4C"
            android:gravity="center"
            android:text="@string/day3"
            android:textColor="#FFFF"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="400dp"
            android:layout_height="31dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="106dp"
            android:background="#002F4C"
            android:gravity="center"
            android:text="@string/day3"
            android:textColor="#FFFF"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="400dp"
            android:layout_height="31dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="230dp"
            android:background="#002F4C"
            android:gravity="center"
            android:text="@string/day2"
            android:textColor="#FFFF"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="84dp"
            android:layout_marginRight="84dp"
            android:layout_marginBottom="169dp"
            android:text="@string/place" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="85dp"
            android:layout_marginRight="85dp"
            android:layout_marginBottom="47dp"
            android:text="@string/place" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="84dp"
            android:layout_marginRight="84dp"
            android:layout_marginBottom="288dp"
            android:text="@string/place" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>